reactions and report done

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "TOKEN": "OTk0MjI1NDAyNzc0MDMyNDE0.GgGTm_.DcgahTzkRarLRA1EQckc99meEI3ZJsM_-AeokM",
-    "DatabaseChannel_ID": 994244759721889792,
-    "ReportChannel_ID": 994230413365096519
+    "DatabaseChannel_ID": 994467946183262320,
+    "DatabaseChannel2_ID": 994467964050997278,
+    "ReportChannel_ID": 994467923760513084
 }
