--- a/config.json
+++ b/config.json
@@ -1,6 +1,8 @@
 {
     "TOKEN": "OTk0MjI1NDAyNzc0MDMyNDE0.GgGTm_.DcgahTzkRarLRA1EQckc99meEI3ZJsM_-AeokM",
+    "Server_ID": 994225018764542042,
     "DatabaseChannel_ID": 994811067274383390,
     "DatabaseChannel2_ID": 994811082365485258,
+    "DatabaseChannel3_ID": 995575186243985488,
     "ReportChannel_ID": 994810999926435931
 }
