--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "TOKEN": "OTk0MjI1NDAyNzc0MDMyNDE0.GgGTm_.DcgahTzkRarLRA1EQckc99meEI3ZJsM_-AeokM",
-    "Server_ID": 924265513524277248,
-    "DatabaseChannel_ID": 1000608452181233764,
-    "DatabaseChannel2_ID": 1000608470145445918,
-    "DatabaseChannel3_ID": 1000608464600563764,
-    "ReportChannel_ID": 955392961955373076
+    "TOKEN": "",
+    "Server_ID": ,
+    "DatabaseChannel_ID": ,
+    "DatabaseChannel2_ID": ,
+    "DatabaseChannel3_ID": ,
+    "ReportChannel_ID": 
 }
